--- a/style.css
+++ b/style.css
@@ -20,7 +20,18 @@
 div{
     /* height: 100%; */
 }
-.header{ 
+.header span{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 32px;
+    color: azure;
+    font-style: italic;
+    margin-right: 100px;
+}
+.header{
+    display: flex;
+    justify-content:flex-end;
+    align-items: center; 
     background-color: rgb(3, 80, 132);
     grid-area: header;
 }
@@ -36,4 +47,12 @@ div{
 label{
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-weight: 600;
+}
+.cadastroVeiculo{
+    display: none;
+}
+.resposta{
+    background-color: bisque;
+    height: 100px;
+    width: 100px;
 }
