--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ div{
     grid-area: conteudo;
 }
 label{
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family:Arial, Helvetica, sans-serif; 
     font-weight: 600;
 }
 .cadastroVeiculo{
@@ -56,3 +56,14 @@ label{
     height: 100px;
     width: 100px;
 }
+/* Design do formulario */
+input{
+    border-radius: 3px;
+    border: none;
+    color: blue;
+    padding: 4px;
+}
+.cadastroCliente #cpf:hover{
+    
+}
+
